--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icomoon": "^2.5.7",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
